--- a/01Home Page.html
+++ b/01Home Page.html
@@ -4,7 +4,7 @@
 
 title>BlackSeason SportBetting Competition</title>
 
-<p align ="center"><img src="hook.JPG">
+<p align ="center"><img src="New folder/hook.JPG">
 
 </head>
 <body bgcolor="000000">
@@ -21,7 +21,7 @@ This exclusive event offers Thrilling experience ,where you'll compete with othe
 
 <hr width="100%"hr color="blue"/>
 
-<p align ="center"><img src="Three.JPG"width="1000"height="500">
+<p align ="center"><img src="New folder/Three.JPG"width="1000"height="500">
 
 <hr width="100%"hr color="blue"/>
 
@@ -52,7 +52,7 @@ Black Season Mixed Champion Series is synonymous with world class competition,cu
 <p>As we embark on this exciting journey,we invite you to join us.Whether you're simple a fan of the action ,we welcome you to the Black Season Mixed Champion Series community.Together,let's create
 a movement that inspires,entertains and unites us all.</font></p>
 
-<p align ="center"><img src="duo.JPG"width="1000"height="500">
+<p align ="center"><img src="New folder/duo.JPG"width="1000"height="500">
 
 <H2><font color="gold"font size="5">Introducing the Black Season Mixed Champion Series A High Stakes Challenge</font></h2>
 
@@ -136,7 +136,7 @@ a life changing prize,We're committed to creating a fair,exciting,and rewarding 
 
 <p><H2><font color="gold"font size="5"align="right">Introducing the Black Season Football League</font></h2>
 <hr width="100%"hr color="blue"align="left"/>
-<img src="runner.JPG"width="600"height="400"align="left"border="5 border-color="white"><font color="white"align="right"font size="5">Are you a talented footballer looking for a chance to shine ? Do you have what 
+<img src="New folder/runner.JPG"width="600"height="400"align="left"border="5 border-color="white"><font color="white"align="right"font size="5">Are you a talented footballer looking for a chance to shine ? Do you have what 
 it takes to be the best ?We're giving one thousand lucky applicants the opportunity to compete in the ultimate football challenge.Get ready for the ultimate test of skill,strategy and
 physical prowess!The Black Season football league is an electrifying event that brings together one thousand talented foootballers to compete for a share of 1million rands in cash,Out of a
 pool of a thousand only one will emerge victorious,claiming the coveted title of Black Season football challenge.</font><p><font color="white"align="right"font size="5">This competiton will empower talented footballers to achieve thier dreams
