--- a/02operations.html
+++ b/02operations.html
@@ -5,7 +5,7 @@
 <title>REQUIREMENTS</title>
 <h1 align="center" ><font color="black" font face="Times New Roman" font size="72">BlACK SEASON OPEN CHALLENGE REQUIREMENTS</font></h1>
 <hr width="100%"hr color="BLACK"size="4"/>
-<p align ="center"><img src="runner 2.JPG"width="100%">
+<p align ="center"><img src="New folder/runner 2.JPG"width="100%">
 
 <H1>INVENTORY NEEDED FOR PARTICIPATION</H1>
 
