--- a/03competitions.html
+++ b/03competitions.html
@@ -4,7 +4,7 @@
 
 title>Competitions</title>
 <hr width="100%"hr color="white"size="1"/>
-<p align ="center"><img src="players.JPG"width="100%">
+<p align ="center"><img src="New folder/players.JPG"width="100%">
 
 </head>
 <body bgcolor="000000">
@@ -59,7 +59,7 @@ and communication.</font></p>
 
 <hr width="100%"hr color="white"size="1"/>
 
-<p align ="left"><img src="swim.JPG"width="80%"height="600">
+<p align ="left"><img src="New folder/swim.JPG"width="80%"height="600">
 
 <h2><font color="white"size="5">APPLICATION AND RECOGNITION</font></h2>
 <p><font color="white"size="5">Aspiring football stars can apply to participate in the black season football league to unlock the mystery games and
@@ -90,7 +90,7 @@ thier full potential.</font></p>
 
 <hr width="100%"hr color="white"size="1"/>
 
-<p align ="left"><img src="balls.JPG"width="80%"height="600">
+<p align ="left"><img src="New folder/balls.JPG"width="80%"height="600">
 
 </body>
 </html>
